--- a/tecolotl-web/src/main/webapp/sin-permiso.xhtml
+++ b/tecolotl-web/src/main/webapp/sin-permiso.xhtml
@@ -18,7 +18,7 @@
         <h:graphicImage library="img" name="/mounstro/whom.svg"/>
         <h:graphicImage library="img" name="/mounstro/whose.svg"/>
     </div>
-    <p class="uk-margin-medium-top">
+    <p class="uk-margin-medium-top uk-text-center">
         <h:outputText rendered="#{param['tipo'] eq 'profesor' or param['tipo'] eq 'coordinador'}" value="Se vencio tu licencia comunícate con el administrador"/>
         <h:outputText rendered="#{param['tipo'] eq 'alumno'}" value="Esto no es un error, comunicate con tu profesor"/>
     </p>
