Centra los datos de la tabla de ciclo escolar

--- a/tecolotl-web/src/main/webapp/administracion/ciclos-escolares.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/ciclos-escolares.xhtml
@@ -74,7 +74,7 @@
                                          var="cicloEscolar"
                                          styleClass="uk-table uk-table-divider uk-table-middle uk-table-hover"
                                          footerClass="uk-background-primary"
-                                         columnClasses=",,uk-text-center,uk-text-center,uk-text-center,uk-text-center"
+                                         columnClasses="uk-text-center,uk-text-center,uk-text-center,uk-text-center,uk-text-center,uk-text-center"
                                          id="tabla-ciclo-escolar">
                                 <h:column headerClass="uk-background-primary uk-text-center">
                                     <f:facet name="header"><span class="letra-titulo">fecha inicio</span></f:facet>
