--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -48,6 +48,7 @@
 		<ul>
 			<li><a href="#inicio"><img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/verde.svg" alt=""/></a></li>
 			<li><a href="#seccion2"><img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/3ojos.svg" alt=""/></a></li>
+			<li><a href="#eventos-logos"><img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/who.svg" alt=""/></a></li>
 			<li><a href="#seccion3"><img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/monstruo.svg" alt=""/></a></li>
 			<li><a href="#seccion4"><img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/naranja.svg" alt=""/></a></li>
 		</ul>
@@ -250,6 +251,10 @@
 					</p>
 				</div>
 			</div>
+		</section>
+		<section id="eventos-logos">
+			<h2 class="color-titulos"/>
+			<h2 class="color-titulos"/>
 		</section>
 		<div>
 			<h:panelGroup layout="block" id="seccion3">
@@ -719,7 +724,9 @@
 		</iframe>
 	</div>
 <!--	<script type="application/javascript" src="https://sdk.amazonaws.com/js/aws-sdk-2.585.0.min.js"></script>-->
-	<script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/landing/landing.js"/>
+<!--	<script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/landing/landing.js"/>-->
+
+	<h:outputScript library="js" name="/landing/landing.js"/>
 	<script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/TweenMax.min.js"/>
 	<script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/landing/animacion-espacio.js"/>
 	<script type="application/javascript" >
