--- a/tecolotl-web/src/main/webapp/alumno/mindmap/2.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/2.xhtml
@@ -78,11 +78,11 @@
 
             <div class="uk-container fondo-mapa-efecto margen-mapa-efecto contenedor-efecto ">
                 <h:panelGroup layout="block">
-                    <h:graphicImage library="img" name="/alumno/pop-art/boton-finished.svg" styleClass="desplaza2 final2" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"/>
+                    <h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/pop-art/boton-finished.svg" styleClass="desplaza2 final2" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"/>
                     <!--<span>#{alumno['map2.title.answered']}</span>-->
                 </h:panelGroup>
                 <div class="imagen-pez uk-margin-auto">
-                    <h:graphicImage library="img" name="/alumno/pescado.svg"/>
+                    <h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/pescado.svg"/>
                 </div>
                 <h:form id="formulario-mapa-mental-escritorio" class="uk-form-stacked">
                     <div class="uk-visible@s">
