--- a/tecolotl-web/src/main/webapp/alumno/mindmap/4.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/4.xhtml
@@ -71,7 +71,7 @@
     </ui:define>
     <ui:define name="contenido">
         <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/alumno/mapa-comparar.css"/>
-        <h:outputStylesheet library="css" name="letra.css"/>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/letra.css"/>
         <div class="uk-section uk-margin-small-right uk-margin-small-left">
             <h:form id="formulario-mapa-mental" class="uk-form-stacked">
             <div class="uk-container fondo-comparar uk-padding-remove ">
