--- a/tecolotl-web/src/main/webapp/ingreso.xhtml
+++ b/tecolotl-web/src/main/webapp/ingreso.xhtml
@@ -8,11 +8,10 @@
       xmlns:c="http://java.sun.com/jsp/jstl/core">
 <h:head>
     <title>#{etiqueta['logging.registry']}</title>
-    <link  rel="shortcut icon"  href="#{resource['img/favicon.ico']}"/>
+    <link  rel="shortcut icon"  href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/favicon.ico"/>
     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/uikit.css"/>
     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/ingreso.css"/>
-<!--    <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/alumno/inicio-sesion.css"/>-->
-    <h:outputStylesheet library="css" name="/alumno/inicio-sesion.css"/>
+    <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/alumno/inicio-sesion.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </h:head>
 <h:body>
@@ -52,7 +51,6 @@
     </script>
     <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/uikit.js"/>
     <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/uikit-icons.js"/>
-<!--    <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/alumno/inicio-sesion.js"/>-->
-    <h:outputScript library="js" name="/alumno/inicio-sesion.js"/>
+    <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/alumno/inicio-sesion.js"/>
 </h:body>
 </html>
