--- a/tecolotl-web/src/main/webapp/sin-permiso.xhtml
+++ b/tecolotl-web/src/main/webapp/sin-permiso.xhtml
@@ -7,8 +7,8 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
 <h:head>
-    <h:outputStylesheet library="css" name="uikit.css"/>
-    <h:outputStylesheet library="css" name="sin-permiso.css"/>
+    <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/uikit.css"/>
+    <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/sin-permiso.css"/>
 </h:head>
 <h:body>
     <p class="letras-animadas"><span>O</span><span>o</span><span>p</span><span>s</span><span>!</span></p>
