--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -9,7 +9,6 @@
       xmlns:c="http://java.sun.com/jsp/jstl/core">
 <ui:composition template="/template/escolar/template-alumno.xhtml">
     <ui:define name="hamburguesa">
-
         <div class="color-nav uk-hidden@m">
             <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar="">
                 <div class="">
@@ -28,7 +27,6 @@
                             <li uk-tooltip="title: #{alumno['for.all.views.dashboard']}; pos: right" class="uk-active uk-text-capitalize"><h:link outcome="dashboard" ><h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/planetas/tierra.svg" width="40" alt=""/></h:link></li>
                             <li uk-tooltip="title: #{alumno['for.all.views.activity']}; pos: right"><h:link outcome="activities"><img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/planetas/planeta1.svg" width="40" alt="" /></h:link></li>
                             <li uk-tooltip="title: #{alumno['for.all.views.library']}; pos: right"><h:link outcome="free-library"><img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/planetas/planeta5.svg" width="40" alt="" /></h:link></li>
-
                         </ul>
                         <div class="uk-text-center uk-display-block uk-margin-large-top">
                             <a href="#" class="uk-text-small uk-display-block uk-text-center uk-text-capitalize" style="color: black;"  data-uk-icon="icon: triangle-down; ratio: 0.7">#{etiqueta['menu']}</a>
@@ -52,11 +50,9 @@
             <div class="uk-position-relative uk-text-center uk-display-block">
                 <a href="#" class="uk-text-small uk-text-muted uk-display-block uk-text-center uk-text-capitalize" data-uk-icon="icon: triangle-down; ratio: 0.7">#{etiqueta['menu']}</a>
                 <div class="uk-dropdown user-drop" data-uk-dropdown="mode: click; pos: bottom-center; animation: uk-animation-slide-bottom-small; duration: 150">
-
                     <h:form>
                         <h:commandLink styleClass="uk-text-capitalize" action="#{alumnoControlador.cerrarSesion()}" value="#{etiqueta['close.sesion']}"/>
                     </h:form>
-
                 </div>
             </div>
 
@@ -73,7 +69,7 @@
         </div>
         <div class="left-nav-wrap uk-hidden@xl ">
             <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-center uk-margin-small-top">
-                <li uk-tooltip="title: #{alumno['for.all.views.dashboard']}; pos: right" class="uk-active"><h:link outcome="dashboard" ><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="60" alt=""/></h:link></li>
+                <li uk-tooltip="title: #{alumno['for.all.views.dashboard']}; pos: right" class="uk-active"><h:link outcome="dashboard" ><h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/planetas/tierra.svg" width="60" alt=""/></h:link></li>
                 <li uk-tooltip="title: #{alumno['for.all.views.activity']}; pos: right" >
                     <h:link outcome="activities" rendered="#{not empty alumnoControlador.tareaActvidadModeloLista}"><h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/planetas/planeta1.svg" width="60" alt=""/></h:link>
                     <h:graphicImage rendered="#{empty alumnoControlador.tareaActvidadModeloLista}" url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/planetas/planeta1.svg" width="60"/>
@@ -350,9 +346,7 @@
                         // console.log("pausado");
                         break;
                     }
-
                 }
-
             }
             function radio() {
                 var contenedorVideo = document.querySelector('#video-actividad');
@@ -384,9 +378,6 @@
                          while (contenedorVideo.hasChildNodes()){
                              contenedorVideo.removeChild(contenedorVideo.firstChild);
                          }
-                         // actividad.removeAttribute('src');
-                         // actividad.setAttribute('src',linkVideo.concat(videos[index].trim()));
-                         // console.log(linkVideo.concat(videos[index].trim()));
                         var linkCompleto = linkImagen.concat(videos[index].trim());
                          imagen.setAttribute('src',linkCompleto.concat('/mqdefault.jpg'));
                         contenedorVideo.appendChild(imagen);
@@ -398,10 +389,8 @@
             }
 
         </script>
-<!--        <script type="application/javascript" src="https://sdk.amazonaws.com/js/aws-sdk-2.585.0.min.js"/>-->
         <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/alumno/calificacion.js"></script>
     </ui:define>
-
 </ui:composition>
 </html>
 
