--- a/tecolotl-web/src/main/webapp/alumno/mindmap/11.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/11.xhtml
@@ -71,7 +71,7 @@
     </ui:define>
     <ui:define name="contenido">
         <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/alumno/mapa-secuencia.css"/>
-        <h:outputStylesheet library="css" name="letra.css"/>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/letra.css"/>
         <div class="uk-section">
             <div class="uk-container  color-fondo contenedor-padre margen-secuencia ">
                 <h:panelGroup layout="block">
