--- a/tecolotl-web/src/main/webapp/alumno/mindmap/15.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/15.xhtml
@@ -72,9 +72,7 @@
         </div>
     </ui:define>
     <ui:define name="contenido">
-<!--        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/alumno/mapa-15.css"/>-->
-<!--        <link rel="stylesheet" href="/resources/css/alumno/mapa-15.css"/>-->
-        <h:outputStylesheet library="css" name="/alumno/mapa-15.css"/>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/alumno/mapa-15.css"/>
         <div class="uk-section uk-margin-small-left uk-margin-small-right">
             <div class="uk-container picture margen-picture">
                 <h:form styleClass="uk-form-stacked">
