--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -12,8 +12,7 @@
 	<title>Esquadron</title>
 	<meta name="google-site-verification" content="DLGw7JmFbDOC2lHAxcYSXxNJuYlID8QR6KrnicJ0oKI" />
 	<meta name="google" content="notranslate"/>
-<!--	<meta property="o"-->
-	<link  rel="shortcut icon"  href="#{resource['img/favicon.ico']}"/>
+	<link rel="shortcut icon" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/favicon.ico"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 	<meta name="description" content="Somos la mejor videoteca digital con actividades interactivas, descargables e imprimibles. ¡Tus alumnos  aprenderán con sus videos favoritos de Youtube en un ambiente 100% académico! +1000 actividades. Recursos para Grammar. Perfecto para laboratorios o homeschool."/>
 	<meta name="keywords" content="ELT,englishworksheet,grammarworksheet,videoclass,homeschool,english,Plataforma educativa,inglés,flashcards"/>
@@ -23,8 +22,7 @@
 	<meta property="og:url" content="https://www.e-squadron.com.mx/"/>
 	<meta property="og:image" content="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/vista_previa.png"/>
 
-<!--	<link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/estilos-landing.css"/>-->
-	<h:outputStylesheet library="css" name="estilos-landing.css"/>
+	<link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/estilos-landing.css"/>
 	<!-- Facebook Pixel Code -->
 	<script>
 		!function(f,b,e,v,n,t,s)
@@ -93,11 +91,10 @@
 						<iframe class="video-alum" src="https://www.youtube.com/embed/2PDXH4XBP44?enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="0"
 								style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
 						<div id="anti-video">
-							<h:graphicImage id="botonply" library="img" name="/icono/youtube.svg" width="80px" height="80px" class="visibilidad"/>
+							<h:graphicImage id="botonply" url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/youtube.svg" width="80px" height="80px" class="visibilidad"/>
 						</div>
-<!--						<div class="video-alum" style="position:absolute;top:0;left:0;width:100%;height:100%;" data-video="2PDXH4XBP44"></div>-->
 					</div>
-					<h1><h:graphicImage library="img" name="esquadron.svg" alt=""/>squadron</h1>
+					<h1><h:graphicImage alt="" url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/esquadron.svg"/>squadron</h1>
 					<p>Teachers everywhere create video classes for their students.
 						So, it feels logical for us to integrate interactive activities for these classes.
 						E-squadron offers you a safe and enriched learning environment for all your students and an easy-to-use teacher dashboard
@@ -712,21 +709,15 @@
 			<div>
 			<img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/landing/squadron.svg" alt=""/>
 			</div>
-<!--			<h5>esquadron</h5>-->
 		</footer>
 		<iframe src="" id="respuesta-form" name="respuesta-formulario" frameborder="0" style="display: none;" width="600" height="600">
-
 		</iframe>
 	</div>
-<!--	<script type="application/javascript" src="https://sdk.amazonaws.com/js/aws-sdk-2.585.0.min.js"></script>-->
 	<script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/landing/landing.js"/>
 	<script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/TweenMax.min.js"/>
 	<script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/landing/animacion-espacio.js"/>
 	<script type="application/javascript" >
 
 	</script>
-<!--    <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/smtp.js"/>-->
-<!--	<script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/email.js"/>-->
-	<ui:remove><h:outputScript library="js" name="email.js"/></ui:remove>
 </h:body>
 </html>
