enlaces profesor apuntado al storage

--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -91,10 +91,11 @@
 						<iframe class="video-alum" src="https://www.youtube.com/embed/2PDXH4XBP44?enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="0"
 								style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
 						<div id="anti-video">
-							<h:graphicImage id="botonply" url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/youtube.svg" width="80px" height="80px" class="visibilidad"/>
+							<h:graphicImage id="botonply"  url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/youtube.svg" width="80px" height="80px" class="visibilidad"/>
 						</div>
+<!--						<div class="video-alum" style="position:absolute;top:0;left:0;width:100%;height:100%;" data-video="2PDXH4XBP44"></div>-->
 					</div>
-					<h1><h:graphicImage alt="" url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/esquadron.svg"/>squadron</h1>
+					<h1><h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/esquadron.svg" alt=""/>squadron</h1>
 					<p>Teachers everywhere create video classes for their students.
 						So, it feels logical for us to integrate interactive activities for these classes.
 						E-squadron offers you a safe and enriched learning environment for all your students and an easy-to-use teacher dashboard
@@ -719,5 +720,7 @@
 	<script type="application/javascript" >
 
 	</script>
+<!--    <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/smtp.js"/>-->
+<!--	<script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/email.js"/>-->
 </h:body>
 </html>
