--- a/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
@@ -33,7 +33,6 @@
     </ui:define>
     <ui:define name="contenido">
         <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/csv-alumnos.css"/>
-        <ui:remove><h:outputStylesheet library="css" name="/profesor/csv-alumnos.css"/></ui:remove>
         <div class="uk-margin-large-top"><h1 class="uk-margin-top lescuadron primera-mayuscula">#{profesor['agregarcsv.title']}</h1></div>
         <div class="uk-grid" uk-grid="">
             <div class="uk-width-1-3@m">
@@ -296,8 +295,7 @@
                                 </div>
                                 <div id="imagenes" class="uk-width-1-1@s">
                                     <c:forEach begin="1" end="28" var="indice">
-                                        <h:graphicImage library="img" name="alumno/iconos-login/${indice}.svg" onclick="cambioImagen(event)"/>
-<!--                                        <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/iconos-login/${indice}.svg" onclick="cambioImagen(event)"/>-->
+                                        <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/iconos-login/${indice}.svg" onclick="cambioImagen(event)" alt=""/>
                                     </c:forEach>
                                     <h:inputHidden id="input-secret-password"
                                                    value="#{agregarCsvControlador.alumnoModelo.contrasenia}">
@@ -334,7 +332,6 @@
         </script>
         <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/nah.js"></script>
         <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/profesor/agregar-alumnos-csv.js"></script>
-        <ui:remove><h:outputScript library="js" name="/profesor/agregar-alumnos-csv.js"/></ui:remove>
         <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/profesor/agregar-alumno-modal.js"></script>
     </ui:define>
 </ui:composition>
